--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js", "./node_modules/signalr/jquery.signalR.js"
+            ]
           },
           "configurations": {
             "production": {
