--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,8 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.js", "./node_modules/signalr/jquery.signalR.js"
+              "./node_modules/jquery/dist/jquery.js", 
+              "./node_modules/signalr/jquery.signalR.js"
             ]
           },
           "configurations": {
